tests/fixtures/invalid/int_lshift_str.py
# Cannot left shift Int and Str
x: int = 1 << "hello"
